@@ -171,6 +171,17 @@ class FileBenchmarkTestCase(BaseTestCase):
         print "zope.pagetemplate: %.2f" % t_zope
         print "                   %.2fX" % (t_zope/t_z3c)
 
+        print "--------------------------"
+        print " Second rendering"
+        print "--------------------------"
+
+        t_z3c = timing(z3cfile.render, table=table)
+        t_zope = timing(zopefile, table=table)
+
+        print "z3c.pt:            %.2f" % t_z3c
+        print "zope.pagetemplate: %.2f" % t_zope
+        print "                   %.2fX" % (t_zope/t_z3c)
+
 # Use a custom context to add real i18n lookup
 
 from zope.i18n import translate
